--- a/Wednesday.css
+++ b/Wednesday.css
@@ -1,1 +1,34 @@
-Wednesday.css
+#header1 {
+  padding-top: 15px;
+  padding-right: 15px;
+  padding-bottom: 15px;
+  padding-left: 15px;
+  text-align: center;
+}
+
+#para1 {
+  color: black;
+  font: times;
+}
+
+
+body {
+  background-color: #66FFFF;
+}
+h1 {
+  color: navy;
+  margin-left: 20px;
+}
+
+header, aside, article {
+  padding: 8px;
+  background-color: #80a2ff;
+  border-radius: 8px;
+  margin-bottom: 10px;
+}
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
